@@ -1317,6 +1317,10 @@ src/server/core/upload_job.cpp -text
 src/server/drivers/Makefile.am -text
 src/server/drivers/baystack/Makefile.am -text
 src/server/drivers/baystack/baystack.vcproj -text
+src/server/drivers/cat2900xl/Makefile.am -text
+src/server/drivers/cat2900xl/cat2900xl.cpp -text
+src/server/drivers/cat2900xl/cat2900xl.h -text
+src/server/drivers/cat2900xl/cat2900xl.vcproj -text
 src/server/drivers/ers8000/Makefile.am -text
 src/server/drivers/ers8000/ers8000.cpp -text
 src/server/drivers/ers8000/ers8000.h -text
