@@ -469,6 +469,14 @@ Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "cisco", "src\server\drivers
 		{AEB182ED-7F5C-4F5A-BCE1-9A38E98579BA} = {AEB182ED-7F5C-4F5A-BCE1-9A38E98579BA}
 	EndProjectSection
 EndProject
+Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "cat2900xl", "src\server\drivers\cat2900xl\cat2900xl.vcproj", "{FEEF505B-75AE-4E52-8177-51FFC4AB2ED2}"
+	ProjectSection(ProjectDependencies) = postProject
+		{CB89D905-C8BE-4027-B2D8-F96C245E9160} = {CB89D905-C8BE-4027-B2D8-F96C245E9160}
+		{7DC90EE4-E31C-4F12-8F1E-81F10E9099FC} = {7DC90EE4-E31C-4F12-8F1E-81F10E9099FC}
+		{AEB182ED-7F5C-4F5A-BCE1-9A38E98579BA} = {AEB182ED-7F5C-4F5A-BCE1-9A38E98579BA}
+		{375F95BD-EFBA-4AA3-8DA3-E79779A12896} = {375F95BD-EFBA-4AA3-8DA3-E79779A12896}
+	EndProjectSection
+EndProject
 Global
 	GlobalSection(SolutionConfigurationPlatforms) = preSolution
 		Debug|Pocket PC 2003 (ARMV4) = Debug|Pocket PC 2003 (ARMV4)
@@ -1241,6 +1249,14 @@ Global
 		{375F95BD-EFBA-4AA3-8DA3-E79779A12896}.Release|Win32.ActiveCfg = Release|Win32
 		{375F95BD-EFBA-4AA3-8DA3-E79779A12896}.Release|Win32.Build.0 = Release|Win32
 		{375F95BD-EFBA-4AA3-8DA3-E79779A12896}.Release|x64.ActiveCfg = Release|Win32
+		{FEEF505B-75AE-4E52-8177-51FFC4AB2ED2}.Debug|Pocket PC 2003 (ARMV4).ActiveCfg = Debug|Win32
+		{FEEF505B-75AE-4E52-8177-51FFC4AB2ED2}.Debug|Win32.ActiveCfg = Debug|Win32
+		{FEEF505B-75AE-4E52-8177-51FFC4AB2ED2}.Debug|Win32.Build.0 = Debug|Win32
+		{FEEF505B-75AE-4E52-8177-51FFC4AB2ED2}.Debug|x64.ActiveCfg = Debug|Win32
+		{FEEF505B-75AE-4E52-8177-51FFC4AB2ED2}.Release|Pocket PC 2003 (ARMV4).ActiveCfg = Release|Win32
+		{FEEF505B-75AE-4E52-8177-51FFC4AB2ED2}.Release|Win32.ActiveCfg = Release|Win32
+		{FEEF505B-75AE-4E52-8177-51FFC4AB2ED2}.Release|Win32.Build.0 = Release|Win32
+		{FEEF505B-75AE-4E52-8177-51FFC4AB2ED2}.Release|x64.ActiveCfg = Release|Win32
 	EndGlobalSection
 	GlobalSection(SolutionProperties) = preSolution
 		HideSolutionNode = FALSE
@@ -1329,6 +1345,7 @@ Global
 		{13A91F2E-A17B-4ABA-B5B2-285807BD7832} = {53997B2A-D94C-428C-816D-938C297A1866}
 		{076E6815-4B6B-4F1E-A36C-CD3DD26EA5AC} = {53997B2A-D94C-428C-816D-938C297A1866}
 		{D73BB67D-032B-4FB7-AEB8-5795B246A072} = {53997B2A-D94C-428C-816D-938C297A1866}
+		{FEEF505B-75AE-4E52-8177-51FFC4AB2ED2} = {53997B2A-D94C-428C-816D-938C297A1866}
 		{DA651576-4E4F-448C-A0A3-9EDD15C81078} = {D73BB67D-032B-4FB7-AEB8-5795B246A072}
 		{375F95BD-EFBA-4AA3-8DA3-E79779A12896} = {D73BB67D-032B-4FB7-AEB8-5795B246A072}
 	EndGlobalSection
