@@ -1,0 +1,44 @@
+/* 
+** NetXMS - Network Management System
+** Driver for Cisco catalyst 2900XL, 2950, and 3500XL switches
+** Copyright (C) 2003-2011 Victor Kirhenshtein
+**
+** This program is free software; you can redistribute it and/or modify
+** it under the terms of the GNU General Public License as published by
+** the Free Software Foundation; either version 2 of the License, or
+** (at your option) any later version.
+**
+** This program is distributed in the hope that it will be useful,
+** but WITHOUT ANY WARRANTY; without even the implied warranty of
+** MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+** GNU General Public License for more details.
+**
+** You should have received a copy of the GNU General Public License
+** along with this program; if not, write to the Free Software
+** Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
+**
+** File: cat2900xl.h
+**
+**/
+
+#ifndef _cat2900xl_h_
+#define _cat2900xl_h_
+
+#include <nddrv.h>
+#include "../lib/cisco/cisco.h"
+
+
+/**
+ * Driver's class
+ */
+class Cat2900Driver : public CiscoDeviceDriver
+{
+public:
+	virtual const TCHAR *getName();
+	virtual const TCHAR *getVersion();
+
+	virtual bool isDeviceSupported(const TCHAR *oid);
+	virtual InterfaceList *getInterfaces(SNMP_Transport *snmp, StringMap *attributes, int useAliases, bool useIfXTable);
+};
+
+#endif
